# courses-journey

./: .gitignore  README.md  diferenca_A_B.txt  element.sh  insert_data.sh  number_guess.sh  number_guess.sql  periodic_table.sql  queries.sh  salon.sh  salon.sql  students.sql  todo.md  universe.sql  worldcup.sql
Java/: expected.md
Java/basics/hellonamejava/: HelloName.java
Java/basics/helloworldjava/: readme.txt
Java/entrevistas/bubblesort/: readme.md
Java/entrevistas/palindromestringjava/: PalindromeString2.java
Java/entrevistas/quicksortjava/: QuickSort.java
Java/extras/: extras.md
Java/extras/clampjava/: Clamp.java
Java/extras/deteccaoAABB/: AABB.java
Java/extras/gameloopjava/: readme.md
Java/extras/lerpjava/: Lerp.java
Java/fibonnacijava/: FibonnaciJava.java
Java/gameloopjava/: GameAWT.java
Java/guessthenumber/: GuessTheNumber.java
Java/hellonamejava/: readme.txt
Java/palindromestringjava/: PalindromeString.java
Java/rotatearrayjava/: RotateArray.java
Java/validarparentesesjava/: ValidarParenteses.java
Relational Database Course/: element.sh  insert_data.sh  number_guess.sh  number_guess.sql  periodic_table.sql  queries.sh  salon.sql  universe.sql
Windows/cmd/: allfiles.bat  allfilesextension.bat  comparacao.txt  compararListas.bat  countfiles.bat  findfile.bat  helloworld.bat  juntartxt.bat  lista1.txt  listarPastas.bat  listdifferences.bat  print_args.bat  readme.md  removerepeatedlines.bat  samefile.bat  twodirectories.bat  verificaApenasNomes.bat
Windows/cmd/consertar-path/: showpathlist.bat  verificarcaminhos.bat
Windows/cmd/testes/: Relational Database Course.txt  Windows.txt  bash.txt  c++.txt  clojure.txt  git.txt  java.txt  javascript.txt  node_modules.txt  python.txt  typescript.txt
Windows/cmd/tests copy/: lista_de_extensoes_sem_repetir.txt
Windows/powershell/: F_hashes.csv  apagaarquivo.ps1  calculaHash.ps1  comparaCSV.ps1  compararListas.ps1  copiaincremental.ps1  copiaincrementalpastas.ps1  copiararquivo.ps1  countfiles.ps1  exiftooldocx.ps1  exiftoolexample.ps1  exiftoolexample2.ps1  exiftoolexample3.ps1  exiftoolmp4.ps1  exiftoolpdf.ps1  exiftoolpng.ps1  inventarioCSV.ps1  randomfiles.ps1  readme.md  verificaBackupPrimeiroNivel.ps1  verificabackup.ps1
Windows/powershell/TestFiles/: Arquivo_1.txt  Arquivo_10.txt  Arquivo_100.txt  Arquivo_11.txt  Arquivo_12.txt  Arquivo_13.txt  Arquivo_14.txt  Arquivo_15.txt  Arquivo_16.txt  Arquivo_17.txt  Arquivo_18.txt  Arquivo_19.txt  Arquivo_2.txt  Arquivo_20.txt  Arquivo_21.txt  Arquivo_22.txt  Arquivo_23.txt  Arquivo_24.txt  Arquivo_25.txt  Arquivo_26.txt  Arquivo_27.txt  Arquivo_28.txt  Arquivo_29.txt  Arquivo_3.txt  Arquivo_30.txt  Arquivo_31.txt  Arquivo_32.txt  Arquivo_33.txt  Arquivo_34.txt  Arquivo_35.txt  Arquivo_36.txt  Arquivo_37.txt  Arquivo_38.txt  Arquivo_39.txt  Arquivo_4.txt  Arquivo_40.txt  Arquivo_41.txt  Arquivo_42.txt  Arquivo_43.txt  Arquivo_44.txt  (+60 more)
Windows/robocopy/: readme.md  samedirectory.bat
Windows/tar/: contarlistadearquivos.bat  extrairarquivos.bat  fazertardepasta.bat  listararquivos.bat
Windows/tests/resultado/: Humans don't live on the surface.docx
bash/networking/dns/: backup_dns.sh  backup_dns_sem_sudo.sh  (+6 more)
c++/: readme.md
c++/ASan/: mingw-msys2.bat  readme.md  test_asan.c
c++/CMake/: readme.md  todo.txt
c++/CMake/AddCustomTarget/: CMakeLists.txt  readme.md
c++/basics/: everytype.cpp  readme.md
c++/bibliotecas/OpenCascade/Foundation/RootClassExample/: CMakeLists.txt  main.cpp  readme.md
c++/bibliotecas/OpenCascade/Threading/ExtractCylinder/: CMakeLists.txt  main.cpp
c++/bibliotecas/OpenCascade/Tutorial/BottleBody/: CMakeLists.txt  main.cpp
c++/bibliotecas/OpenCascade/Tutorial/BottleProfile/: CMakeLists.txt  main.cpp  readme.md
c++/bibliotecas/OpenCascade/Tutorial/BottleThreading/: CMakeLists.txt  main.cpp
c++/bibliotecas/OpenCascade/helloOpenCascade/: CMakeLists.txt  main.cpp  readme.md
c++/clang/: helloworld.cpp  readme.md
c++/g++/: mingw-standalone.bat  readme.md
c++/g++/LikeTargetSources/: CMakeLists.txt  readme.md
c++/g++/LikeTargetSources/include/: bar.h
c++/g++/LikeTargetSources/src/: bar.cpp  foo.cpp  main.cpp
c++/programas/: FreeCAD.md
c++/vcpkg/: GetStarted.md
clojure/hello-world-clojure/: readme.txt
cmd/: countallfiles.bat  filesextension.bat  findstrexample.bat  listfiles.bat  readme.md  samefile.bat  samename.bat
cmd/tests/: lista_de_extensoes_ordenada.txt
docker/dns_smtp_www/: Dockerfile  Dockerfiledns  Dockerfilewww  readme.md  servidor_docker_dns.sh  servidor_docker_www.sh  setup_dns.sh  setup_smtp.sh  setup_www.sh
docker/multicast/: docker-compose.yml
git/: goodsignsprompt.md
javascript/: firstprompt.md  readme.md
javascript/ArrowMaze/: draw.js  index.html  resize.js  scripts.js
javascript/WebSockets/: client-noheart.js  client-softcoded.js  client-validated.js  client.cli.js  client.js  complete-server.js  package-lock.json  package.json  readme.md  server-connection-limited.js  server-heartbeat.js  server-heatbeat.js  server-low-payload.js  server-rate-limit.js  server-timeout.js  server-validate.js  server.js
javascript/ajv/: ajvExample.js  package-lock.json  readme.md  schema.json
javascript/basics/: helloname.js
javascript/express/: readme.md
javascript/puppeteer/: firstprompt.md  package-lock.json  pegaSite.js  puppeteer.js  readme.md  verificaMudanca.js
powershell/: listfiles.ps1
python/HuggingFace/: example.py
python/NLTK/: example01.py
python/PySide/: altDetect.py  pyside.py
python/sqlmodel/: getstarted.py  readme.md
raspberry/GPIO/: readme.md
typescript/: readme.md
typescript/oop/: classExample.ts  firstSteps.md  goodsignalsprompt.md  normalClassDependence.md  readme.md  whereInterfaces.md
typescript/questionsAnalyser/: index.db  package-lock.json  package.json  readme.md  todo.txt
(+226 files in other folders)
